[metadata]
name = nova-lxd
summary = native lxd driver for openstack
description-file =
    README.md
version = 13.2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nova_lxd
namespace_packages = 
	nova_lxd

[entry_points]
console_scripts =
   lxc-image-converter = nova_lxd.cmd.converter:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = nova_lxd/locale
domain = nova_lxd

[update_catalog]
domain = nova_lxd
output_dir = nova_lxd/locale
input_file = nova_lxd/locale/nova_lxd.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nova_lxd/locale/nova_lxd.pot
