[metadata]
name = nova-lxd
summary = native lxd driver for openstack
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    nova/virt/lxd
    nova/tests
    nova_lxd_tempest_plugin

[entry_points]
tempest.test_plugins =
    nova-lxd-tempest-plugin = nova_lxd_tempest_plugin.plugin:MyPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
